--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "create-react-class": "^15.6.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router": "3.2.1",
     "react-scripts": "3.1.1"
   },
   "scripts": {
